--- a/config
+++ b/config
@@ -41,11 +41,13 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# Alternative: rofi
+bindsym $mod+d exec rofi -show run -lines 7 -eh 2 -width 100 -padding 400 -opacity "100" -bw 0 -bg "$bg-color" -fg "$inactive-text-color" -hlbg "$bg-color" -hlfg "$text-color" -font "System San Francisco Display 18"
 
 # change focus
 bindsym $mod+j focus left
@@ -177,6 +179,15 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
         tray_output primary
+
+				colors {
+					background $bg-color
+					separator $indicator-color
+					#										border							background					text
+					focused_workspace		$bg-color						$bg-color						$text-color
+					inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
+					urgent_workspace		$urgent-bg-color		$urgent-bg-color		$urgent-text-color
+				}
 }
 
 # lock screen
@@ -208,11 +219,17 @@ set $bg-color							#5B5B5B
 set $text-color						#00FFFF
 set $inactive-bg-color		#5B5B5B
 set $inactive-text-color	#FFADFD
+set $inactive-text-color-bright	#FF00F9
 set $urgent-bg-color			#5B5B5B
 set $urgent-text-color		#FF0000
+set $indicator-color			#FF00F9
 
 # Window colors
-client.focused						$bg-color						$bg-color						$text-color
-client.unfocused					$inactive-bg-color	$inactive-bg-color	$inactive-text-color
-client.focused_inactive		$inactive-bg-color	$inactive-bg-color	$inactive-text-color
-client.urgent							$urgent-bg-color		$urgent-bg-color		$urgent-text-color
+#													border							background					text									indicator
+client.focused						$bg-color						$bg-color						$text-color						$indicator-color
+client.unfocused					$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$indicator-color
+client.focused_inactive		$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$indicator-color
+client.urgent							$urgent-bg-color		$urgent-bg-color		$urgent-text-color		$indicator-color
+
+# Get rid of borders
+hide_edge_borders both
