--- a/config
+++ b/config
@@ -50,10 +50,10 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -show run -lines 7 -eh 2 -width 100 -padding 400 -opacity "100" -bw 0 -bg "$bg-color" -fg "$inactive-text-color" -hlbg "$bg-color" -hlfg "$text-color" -font "System San Francisco Display 18"
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
