--- a/config
+++ b/config
@@ -74,7 +74,7 @@ bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 #bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 
-# focus_follows_mouse no
+focus_follows_mouse no
 
 # change focus
 bindsym $mod+h focus left
@@ -359,7 +359,7 @@ bindsym $mod+m bar mode toggle
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  client.focused          #556064 #16A085 #80FFF9 #FDF6E3
   client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
   client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
@@ -430,6 +430,5 @@ exec xinput set-prop 11 143 0
 # Speed up trackpoint
 exec xinput set-prop 12 268 0.325
 
-# Background
-#exec_always --no-startup-id /usr/bin/feh --bg-fill '/home/adleypc/Pictures/Wallpapers/albums/cropped-ride-nowhere-lrg.png'
-#exec --no-startup-id nitrogen --restore
+# Coq
+exec --no-startup-id exec eval `opam config env`
