--- a/config
+++ b/config
@@ -276,7 +276,7 @@ mode "resize" {
 }
 
 # Lock screen
-bindsym $mod+shift+x exec --no-startup-id blurlock
+#bindsym $mod+shift+x exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -290,7 +290,7 @@ exec --no-startup-id clipit
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-exec --no-startup-id xautolock -time 10 -locker blurlock
+# exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
@@ -429,6 +429,3 @@ exec xinput set-prop 11 143 0
 
 # Speed up trackpoint
 exec xinput set-prop 12 268 0.325
-
-# Coq
-exec --no-startup-id exec eval `opam config env`
