--- a/config
+++ b/config
@@ -328,10 +328,12 @@ set_from_resource $term_color14    color14
 set_from_resource $term_color15    color15
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
+# /etc/i3status.conf
 bar {
 	i3bar_command i3bar
-	status_command i3status
-	position bottom
+	# status_command i3status
+	status_command i3blocks
+	position top
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
 #	tray_output primary
