--- a/config
+++ b/config
@@ -30,8 +30,9 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec urxvt -fn "xft:Source Code Pro:Regular:size10"
-bindsym $mod+Return exec urxvt
+# bindsym $mod+Return exec urxvt
 # i3-sensible-terminal
+bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+Shift+q kill
