--- a/config
+++ b/config
@@ -61,6 +61,7 @@ bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 
 # Start Applications
 bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
+bindsym $mod+F1 exec ~/Scripts/surfmarks-i
 # bindsym $mod+F2 exec firefox
 # bindsym $mod+F2 exec palemoon
 bindsym $mod+F2 exec ~/Scripts/surfmarks
@@ -439,3 +440,4 @@ exec xinput set-prop 12 268 0.325
 
 # Fix key mappings
 exec --no-startup-id xmodmap ~/.Xmodmap
+bindsym $mod+Shift+x xmodmap ~/.Xmodmap
