--- a/config
+++ b/config
@@ -61,7 +61,8 @@ bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 
 # Start Applications
 bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
-bindsym $mod+F1 exec ~/Scripts/surfmarks-i
+# bindsym $mod+F1 exec ~/Scripts/surfmarks-i
+bindsym $mod+F1 exec firefox
 # bindsym $mod+F2 exec firefox
 # bindsym $mod+F2 exec palemoon
 bindsym $mod+F2 exec ~/Scripts/surfmarks
@@ -118,8 +119,8 @@ bindsym $mod+q split toggle
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
