--- a/bg-saved.cfg
+++ b/bg-saved.cfg
@@ -1,4 +1,5 @@
 [xin_-1]
-file=/home/adleypc/Pictures/Wallpapers/albums/cropped-ride-nowhere-lrg.png
+#file=/home/adleypc/Pictures/Wallpapers/albums/cropped-ride-nowhere-lrg.png
+file=/usr/share/backgrounds/artwork-Sun-teal-1280347.png
 mode=5
 bgcolor=#002A36
