creating tabs for monacle layout

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -66,8 +66,10 @@ font-0 = mono:pixelsize=9;1
 font-1 = Source Code Pro:size=8;1
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm xwindow
-modules-center = top-mem top-cpu temp
+#modules-left = bspwm xwindow
+modules-left = bspwm
+#modules-center = top-mem top-cpu temp
+modules-center = tabs
 modules-right = bat0 bat1 filesystem vol wlan eth wttr date
 
 tray-position = right
@@ -82,6 +84,13 @@ scroll-down = bspwm-deskprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/tabs]
+foreground = #dfdfdf
+foreground-alt = #555
+type = custom/script
+exec = tabs "#dfdfdf" "#7d7d7d"
+interval = 0
 
 [module/bat0]
 type = custom/script
@@ -135,8 +144,7 @@ format-underline = ${colors.underline-15}
 
 [module/wttr]
 type = custom/script
-exec = /home/adleypc/Scripts/weather
-format-prefix = "[p,l,h]: "
+exec = /usr/local/bin/weather
 format-underline = ${colors.underline-14}
 
 [module/xwindow]
@@ -148,9 +156,10 @@ type = internal/fs
 interval = 25
 mount-0 = /
 label-mounted = df: %percentage_used%%
+label-mounted-underline = ${colors.underline-7}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
-format-underline = ${colors.underline-7}
+label-unmounted-underline = ${colors.underline-7}
 
 
 [module/bspwm]
@@ -217,15 +226,14 @@ card = intel_backlight
 type = internal/network
 interface = wlp4s0
 interval = 3.0
-format-underline = ${colors.underline-9}
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+format-connected = 直 <label-connected>
+format-connected-underline = ${colors.underline-9}
 label-connected = %essid%
 
-format-disconnected =
+format-disconnected = 睊 no wifi
 ;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected-underline = ${colors.underline-9}
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
@@ -240,9 +248,8 @@ ramp-signal-foreground = ${colors.foreground-alt}
 type = internal/network
 interface = enp0s31f6
 interval = 3.0
-format-underline = ${colors.underline-9}
 
-format-connected-underline = #55aa55
+format-connected-underline = ${colors.underline-9}
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
