--- a/config/polybar/config
+++ b/config/polybar/config
@@ -42,6 +42,7 @@ underline-14 = #ffb74d
 underline-15 = #ff8a65
 
 [bar/adley-bar]
+monitor = eDP1
 enable-ipc = true
 width = 100%
 height = 20
@@ -71,6 +72,92 @@ modules-left = bspwm
 #modules-center = top-mem top-cpu temp
 modules-center = tabs
 modules-right = bat0 bat1 filesystem vol wlan eth wttr date
+
+tray-position = right
+tray-padding = 0
+
+wm-restack = bspwm
+
+;override-redirect = true
+
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/adley-bar-external]
+monitor = DP1
+enable-ipc = true
+width = 100%
+height = 20
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 2
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 0
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = mono:pixelsize=9;1
+font-1 = Source Code Pro:size=8;1
+font-2 = siji:pixelsize=10;1
+
+modules-left = bspwm
+modules-center = tabs
+modules-right = date
+
+tray-position = right
+tray-padding = 0
+
+wm-restack = bspwm
+
+;override-redirect = true
+
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/adley-bar-external-2]
+monitor = HDMI2
+enable-ipc = true
+width = 100%
+height = 20
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 2
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 0
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = mono:pixelsize=9;1
+font-1 = Source Code Pro:size=8;1
+font-2 = siji:pixelsize=10;1
+
+modules-left = bspwm
+modules-center = tabs
+modules-right = date
 
 tray-position = right
 tray-padding = 0
@@ -164,20 +251,21 @@ label-unmounted-underline = ${colors.underline-7}
 
 [module/bspwm]
 type = internal/bspwm
+pin-workspaces = true
 
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.underline-1}
 label-focused-padding = 2
 
-label-occupied = %index%
+label-occupied = %name%
 label-occupied-padding = 2
 
-label-urgent = %index%!
+label-urgent = %name%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
-label-empty = %index%
+label-empty = %name%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
