--- a/config/polybar/config
+++ b/config/polybar/config
@@ -64,8 +64,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = SourceCodePro-Regular:size=10;1
-font-1 = SourceCodePro-Regular:size=10;1
-font-2 = Wuncon Siji:pixelsize=10;1
+font-1 = SourceCodePro-Regular:size=11;1
+font-2 = DejaVuSansMono:pixelsize=12;1
+#font-2 = Wuncon Siji:pixelsize=10;1
 
 #modules-left = bspwm xwindow
 modules-left = bspwm
@@ -114,7 +115,7 @@ font-2 = Wuncon Siji:pixelsize=10;1
 
 modules-left = bspwm
 modules-center = tabs
-modules-right = date
+modules-right = date-external
 
 tray-position = right
 tray-padding = 0
@@ -157,7 +158,7 @@ font-2 = Wuncon Siji:pixelsize=10;1
 
 modules-left = bspwm
 modules-center = tabs
-modules-right = date
+modules-right = date-external
 
 tray-position = right
 tray-padding = 0
@@ -175,6 +176,7 @@ cursor-scroll = ns-resize
 [module/tabs]
 foreground = #dfdfdf
 foreground-alt = #555
+format-font = 1
 type = custom/script
 exec = tabs "#dfdfdf" "#7d7d7d"
 interval = 0
@@ -218,10 +220,12 @@ format-prefix = "temp: "
 
 [module/vol]
 type = custom/script
-exec = amixer get Master | grep -o "[0-9]*%\|\[on\]\|\[off\]"
-format-prefix = "🎵 "
+exec = /usr/local/bin/vol
+format-font = 2
 interval = 1
+format-prefix = "🎵"
 format-underline = ${colors.underline-8}
+format-suffix = "%"
 
 [module/date]
 type = custom/script
@@ -229,9 +233,15 @@ exec = date -u '+%Y %b %d (%a) %H:%M'
 interval = 25
 format-underline = ${colors.underline-15}
 
+[module/date-external]
+type = custom/script
+exec = date -u '+%Y %b %d (%a) %H:%M'
+interval = 25
+
 [module/wttr]
 type = custom/script
 exec = /usr/local/bin/weather
+format-font = 2
 format-underline = ${colors.underline-14}
 
 [module/charging]
@@ -242,9 +252,13 @@ interval = 1
 
 [module/df]
 type = custom/script
-exec = /usr/local/bin/print-storage
+exec = /usr/local/bin/storage
 interval = 25
+prefix-font = 0
+format-prefix = "df: "
 format-underline = ${colors.underline-7}
+
+[module/ovpn]
 
 [module/xwindow]
 type = internal/xwindow
@@ -327,6 +341,7 @@ type = internal/network
 interface = wlp4s0
 interval = 3.0
 
+format-font = 2
 format-connected = 直 <label-connected>
 format-connected-underline = ${colors.underline-9}
 label-connected = %essid%
