--- a/SmallConfig/polybar/config
+++ b/SmallConfig/polybar/config
@@ -51,7 +51,8 @@ module-margin-right = 1
 
 font-0 = SourceCodePro-Regular:size=8;1
 font-1 = SourceCodePro-Regular:size=10;1
-font-2 = Wuncon Siji:pixelsize=8;1
+#font-2 = Wuncon Siji:pixelsize=9;1
+font-2 = Symbola:pixelsize=9;1
 #font-2 = DejaVuSansMono:pixelsize=8;1
 
 #modules-left = bspwm xwindow
@@ -322,11 +323,11 @@ card = intel_backlight
 
 [module/wlan]
 type = internal/network
-interface = wlp4s0
+interface = wlp3s0
 interval = 3.0
 
 format-font = 2
-format-connected = 直 <label-connected>
+format-connected = <label-connected>
 format-connected-underline = ${colors.underline-9}
 label-connected = %essid%
 
@@ -345,13 +346,10 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp0s31f6
+interface = enp0s25
 interval = 3.0
 
-format-connected-underline = ${colors.underline-9}
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = "TMP: ethernet connected"
+label-connected = "⏚"
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
