--- a/SmallConfig/polybar/config
+++ b/SmallConfig/polybar/config
@@ -11,21 +11,13 @@ foreground-alt = #555
 primary = #ff30fe
 secondary = #be00b8
 alert = #bd2c40
-underline-1 = #f06292
-underline-2 = #ba68c8
-underline-3 = #9575cd
-underline-4 = #7986cb
-underline-5 = #64b5f6
-underline-6 = #4fc3f7
-underline-7 = #4dd0e1
-underline-8 = #4db6ac
-underline-9 = #81c784
-underline-10 = #aed581
-underline-11 = #dce775
-underline-12 = #fff176
-underline-13 = #ffd54f
-underline-14 = #ffb74d
-underline-15 = #ff8a65
+underline-1 = #be2167
+underline-2 = #be219e
+underline-3 = #a421be
+underline-4 = #7721be
+underline-5 = #217fbe
+underline-6 = #21be9b
+underline-7 = #21be40
 
 [bar/adley-bar]
 ;monitor = eDP1
@@ -53,12 +45,9 @@ font-0 = SourceCodePro-Regular:size=8;1
 font-1 = Wuncon Siji:pixelsize=9;1
 font-2 = Symbola:pixelsize=9;1
 
-#modules-left = bspwm xwindow
 modules-left = bspwm
-#modules-center = top-mem top-cpu temp
 modules-center = tabs
-modules-right = charging bat0 df vol wlan eth wttr date
-#modules-right = charging bat0 df wlan eth wttr date
+modules-right = charging bat df vol wlan eth wttr date
 
 tray-position = right
 tray-padding = 0
@@ -164,20 +153,12 @@ type = custom/script
 exec = $SCRIPTS_HOME/tabs "#dfdfdf" "#7d7d7d"
 interval = 0
 
-[module/bat0]
+[module/bat]
 type = custom/script
 exec = cat /sys/class/power_supply/BAT0/capacity
 interval = 5
-format-underline = ${colors.underline-5}
+format-underline = ${colors.underline-2}
 format-prefix = "bat: "
-format-suffix = "%"
-
-[module/bat1]
-type = custom/script
-exec = cat /sys/class/power_supply/BAT1/capacity
-interval = 5
-format-underline = ${colors.underline-6}
-format-prefix = "bat1: "
 format-suffix = "%"
 
 [module/top-mem]
@@ -206,13 +187,13 @@ type = custom/script
 exec = getvol
 format-font = 0
 interval = 1
-format-underline = ${colors.underline-8}
+format-underline = ${colors.underline-4}
 
 [module/date]
 type = custom/script
 exec = date -u '+%Y %b %d (%a) %H:%M'
 interval = 25
-format-underline = ${colors.underline-15}
+format-underline = ${colors.underline-7}
 
 [module/date-external]
 type = custom/script
@@ -223,13 +204,11 @@ interval = 25
 type = custom/script
 exec = weather
 format-font = 1
-format-underline = ${colors.underline-14}
+format-underline = ${colors.underline-6}
 
 [module/charging]
 type = custom/script
 exec = charging | sed 's/charging/⚡/g'
-; exec = charging | sed 's/charging/Ω/g'
-; exec = battery
 format-font = 0
 interval = 1
 
@@ -239,7 +218,7 @@ exec = storage
 interval = 25
 prefix-font = 1
 format-prefix = "⛃ "
-format-underline = ${colors.underline-7}
+format-underline = ${colors.underline-3}
 
 [module/ovpn]
 
@@ -325,15 +304,13 @@ interface = wlp3s0
 interval = 3.0
 
 format-font = 0
+
 format-connected = <label-connected>
-format-connected-underline = ${colors.underline-9}
+format-connected-underline = ${colors.underline-5}
 label-connected = %essid%
 
 format-disconnected = no wifi
-;format-disconnected = <label-disconnected>
-format-disconnected-underline = ${colors.underline-9}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-disconnected-underline = ${colors.underline-5}
 
 ramp-signal-0 = 
 ramp-signal-1 = 
@@ -348,127 +325,10 @@ interface = enp0s25
 interval = 3.0
 
 label-connected = "⏚"
-
 format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = 🔇 muted
-label-muted-foreground = #666
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
-
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
 
 [global/wm]
 margin-top = 0
 margin-bottom = 0
 
-; vim:ft=dosini
