--- a/SmallConfig/polybar/config
+++ b/SmallConfig/polybar/config
@@ -152,8 +152,9 @@ interval = 0
 type = custom/script
 exec = cat /sys/class/power_supply/BAT0/capacity
 interval = 5
+format-font = 2
 format-underline = ${colors.underline-2}
-format-prefix = "bat: "
+format-prefix = "🔋 "
 format-suffix = "%"
 
 [module/top-mem]
