--- a/SmallConfig/polybar/config
+++ b/SmallConfig/polybar/config
@@ -58,7 +58,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 [bar/adley-bar-external]
-monitor = DP1
+monitor = VGA-1
 enable-ipc = true
 width = 100%
 height = 20
