--- a/SmallConfig/polybar/config
+++ b/SmallConfig/polybar/config
@@ -181,7 +181,7 @@ format-prefix = "cpu: "
 
 [module/temp]
 type = custom/script
-exec = /usr/lib/i3blocks/temp
+exec = temp
 interval = 25
 format-underline = ${colors.underline-4}
 format-prefix = "temp: "
@@ -301,6 +301,12 @@ ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-foreground = ${colors.foreground-alt}
+
+[module/traffic]
+type = custom/script
+exec = $SCRIPTS_HOME/traffic
+interval = 5
+format-underline = ${colors.underline-5}
 
 [module/eth]
 type = internal/network
